2010-03-11  Gautier Portet <kassoulet gmail com>

	* src/soundconverter.py: New command line parser.
	  (thanks Marco)

2010-03-02  Gautier Portet <kassoulet gmail com>

	* src/soundconverter.py: New Asynchronous core.
	  Wav sample width setting.
	  Flac compression setting.

	  release 1.5.0-alpha1

2010-02-10  Gautier Portet <kassoulet gmail com>

	* src/soundconverter.py: Add realaudio to mime whitelist.
	  Fixed tagreader stall when adding unrecognized files.

2009-12-14  Gautier Portet <kassoulet gmail com>

	* src/soundconverter.py: Add missing quoting when using destination
	  folder.

2009-11-09  Gautier Portet <kassoulet gmail com>

	* src/soundconverter.py: Fix hanging when trying to load DXR files.
	  (thanks Nastrafireblaze, fix lp:479420)

2009-10-03  Gautier Portet <kassoulet gmail com>

	* src/soundconverter.py: Remember the last used folder when adding
	  files/folders.
	  (thanks szpak, add #4807)

2009-09-30  Gautier Portet <kassoulet gmail com>

	* src/soundconverter.py: Fix wrong destination folder when using both
	  same-folder-as-source, base folder, and custom filename patterns.
	  (thanks Tino, fix #016295)

	* po/nl.po: Update dutch translation.
	  (thanks Tino)

2009-07-15  Gautier Portet <kassoulet gmail com>

	* src/soundconverter.py: Follow symbolic links. Wow, how can something this
	  important can be missing for years ? :)
	  Faster typefinder by removing the useless fakesink.
	  (7m -> 20s on a 16GB folder)

2009-07-02  Gautier Portet <kassoulet gmail com>

	* src/soundconverter.py: Force vbr-max-bitrate to 320 when using mp3+vbr, since
	  gstreamer now defaults to 160 (stupid!).
	  (thanks psychoman, fix #15950)
	  release 1.4.4

2009-06-24  Gautier Portet <kassoulet gmail com>

	* po/: Rosetta sync. Update all translations.
	  Add Danish, English (Australia), Estonian, Japanese and Vietnamese
	  translations.

2009-06-15  Gautier Portet <kassoulet gmail com>

	* src/soundconverter.py: Activate GVfs authentication